--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,16 +1,16 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
+title: TepidKoffeeKat
 logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
+description: this is for a tutorial 
 
 
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
+  name: Tim Rodriguez
   image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
+  say-hello: Hello, I’m <strong> Tim</strong>
   bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
 
 
